adding taste change of millennials

--- a/02.Rmd
+++ b/02.Rmd
@@ -9,7 +9,7 @@ public housing, government planning, Singapore
 
 The public housing system provides accommodation for 80% of Singapore’s population and is the cornerstone of the ruling party’s promise of prosperity to its population. As The Economist describes, the housing system is “a linchpin of economic and social policy and an anchor for the ruling People’s Action Party (PAP)”. The movements in public housing system also heavily influences the private property market as public housing is an alternative to private housing. As housing stability is one of the most important measures by which the Singapore government is judged, a tool that can predict the effect of policy proposals and build plans on housing prices (both public and private) will be useful to the government as it considers the future.
 
-The public housing system is straining as the new generation of millenials have different needs than what the current public housing system is providing. Compared to their parents, millennials faces skyrocketing prices due to a rapidly growing population (40% increase from 2000 to 2017) combined with speculative foreign investors which has made home ownership out of reach. Additionally, current policy requires that homebuyers get married before they can qualify for public housing. As many millennials delay or forego marriage, there is a large segment of the population who are served neither by the public housing market nor the exorbitantly-priced private market (where prices can be 2-3X that of similar public apartments). Finally, the new generation of aspiring homeowners also have different tastes than what the government is used to building.
+The public housing system is straining as the new generation of millenials have different needs than what the current public housing system is providing. Compared to their parents, millennials faces skyrocketing prices due to a rapidly growing population (40% increase from 2000 to 2017) combined with speculative foreign investors which has made home ownership out of reach. Additionally, current policy requires that homebuyers get married before they can qualify for public housing. As many millennials delay or forego marriage, there is a large segment of the population who are served neither by the public housing market nor the exorbitantly-priced private market (where prices can be 2-3X that of similar public apartments). Finally, the new generation of aspiring homeowners also have different attitudes when it comes to housing: they are more open to renting and desire features that the government is not used to building or is unable to satisfy within the existing one-size-fits-all model.
 
 
 ## A middle.
